Fix motd close button color on dark mode

--- a/static/styles/themes/dark-theme.scss
+++ b/static/styles/themes/dark-theme.scss
@@ -713,4 +713,10 @@ textarea.form-control {
     }
 }
 
+#motd {
+    .btn-close {
+        filter: invert(100%);
+    }
+}
+
 @import 'ansi-dark';
